--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -9,7 +9,7 @@
     <script defer src="../../public/js/chat.js"></script>
     <link rel="stylesheet" href="../../public/css/chat.css">
     {{/if}}
-    <title>{{title}}</title>
+    <title>{{cap_first page}}</title>
 </head>
 <body>
     {{>navbar}}
