--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,16 @@
 <div class="container">
     <h1 style="margin-top: 2em;">{{title}}</h1>   
 
+    <div>
+        {{#if errors}}
+            {{#each errors}}
+                <div class="alert alert-danger">
+                    {{this.msg}}
+                </div>
+            {{/each}}
+        {{/if}}
+    </div>
+
     <form method="POST" action="/login">
         <div class="form-group">
             <label for="username">Username</label>
