--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,24 +5,24 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item {{#iff page '===' 'home'}}active{{/iff}}">
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         {{#if isAuthenticated}}
-        <li class="nav-item">
+        <li class="nav-item {{#iff page '===' 'profile'}}active{{/iff}}">
             <a class="nav-link" href="/profile">Profile</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {{#iff page '===' 'chat'}}active{{/iff}}">
             <a class="nav-link" href="/chat">Chat</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
         </li>
         {{else}}
-        <li class="nav-item">
+        <li class="nav-item {{#iff page '===' 'register'}}active{{/iff}}">
             <a class="nav-link" href="/register">Register</a>
         </li>
-        <li>
+        <li class="nav-item {{#iff page '===' 'login'}}active{{/iff}}">
             <a class="nav-link" href="/login">Login</a>
         </li>
         {{/if}}
