--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    {{#if chat}}
-    <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="../../public/js/chat.js"></script>
-    <link rel="stylesheet" href="../../public/css/chat.css">
-    {{/if}}
-    <title>{{cap_first page}}</title>
-</head>
-<body>
-    {{>navbar}}
-    {{{body}}}
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="/public/css/styles.css">
+        <title>{{capFirstChar page}}</title>
+    </head>
+    <body>
+        {{>navbar}}
+        {{#if subpage}}
+            <div class="container" style="margin-top:136px;">
+                {{>subnavbar}}
+                {{{body}}}
+            </div>
+        {{else}}
+            <div class="container" style="margin-top:80px;">
+                {{{body}}}
+            </div>
+        {{/if}}
+    </body>
 </html>
