--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,32 +5,34 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item {{#iff page '===' 'home'}}active{{/iff}}">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        {{#if isAuthenticated}}
-        <li class="nav-item {{#iff page '===' 'profile'}}active{{/iff}}">
-            <a class="nav-link" href="/profile">Profile</a>
-        </li>
-        <li class="nav-item {{#iff page '===' 'chat'}}active{{/iff}}">
-            <a class="nav-link" href="/chat">Chat</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-        </li>
-        {{else}}
-        <li class="nav-item {{#iff page '===' 'register'}}active{{/iff}}">
-            <a class="nav-link" href="/register">Register</a>
-        </li>
-        <li class="nav-item {{#iff page '===' 'login'}}active{{/iff}}">
-            <a class="nav-link" href="/login">Login</a>
-        </li>
-        {{/if}}
- 
+            <li class="nav-item {{#iff page '===' 'home'}}active{{/iff}}">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            {{#if isAuthenticated}}
+                <li class="nav-item {{#iff page '===' 'profile'}}active{{/iff}}">
+                    <a class="nav-link" href="/profile">Profile</a>
+                </li>
+                <li class="nav-item {{#iff page '===' 'groups'}}active{{/iff}}">
+                    <a class="nav-link" href="/groups">Groups</a>
+                </li>
+                <li class="nav-item {{#iff page '===' 'friends'}}active{{/iff}}">
+                    <a class="nav-link" href="/friends">Friends</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+            {{else}}
+                <li class="nav-item {{#iff page '===' 'register'}}active{{/iff}}">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                <li class="nav-item {{#iff page '===' 'login'}}active{{/iff}}">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+            {{/if}}
         </ul>
         <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
