--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,8 @@
 <div>
-    {{#if errors}}
-        {{#each errors}}
-            <div class="alert alert-danger">
-                {{this.msg}}
-            </div>
-        {{/each}}
+    {{#if error}}
+        <div class="alert alert-danger">
+            {{error}}
+        </div>
     {{/if}}
 </div>
 
