--- a/views/groupsleaveleaderselect.hbs
+++ b/views/groupsleaveleaderselect.hbs
@@ -1,8 +1,8 @@
 <a href="/groups/all/{{selectedChannelId}}">Go Back</a>
 
-{{#if searchError}}
+{{#if errroMessage}}
     <div class="alert alert-danger">
-        {{searchError}}
+        {{errorMessage}}
     </div>
 {{/if}}
 
