--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
     width: 500px;
     height: 300px;
     background-color:greenyellow;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 #friends-container {
