--- a/views/friendsremove.hbs
+++ b/views/friendsremove.hbs
@@ -1,6 +1,12 @@
-{{#if searchError}}
+{{#if errorMessage}}
     <div class="alert alert-danger">
-        {{searchError}}
+        {{errorMessage}}
+    </div>
+{{/if}}
+
+{{#if successMessage}}
+    <div class="alert alert-danger">
+        {{successMessage}}
     </div>
 {{/if}}
 
