--- a/views/groupsinvite.hbs
+++ b/views/groupsinvite.hbs
@@ -1,9 +1,17 @@
 <a href="/groups/all/{{selectedChannelId}}">Go Back</a>
-{{#if searchError}}
+
+{{#if errorMessage}}
     <div class="alert alert-danger">
         {{searchError}}
     </div>
 {{/if}}
+
+{{#if successMessage}}
+    <div class="alert alert-success">
+        {{successMessage}}
+    </div>
+{{/if}}
+
 <form method="POST", action="/groups/all/{{selectedChannelId}}/invite">
     <div class="form-group">
         <label for="friendName">Invite Friend:</label>
