--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,12 @@
 .message-log {
-    width: 500px;
-    height: 300px;
+    width: 100%;
+    height: 400px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    outline: solid black 1px;
     background-color:greenyellow;
     overflow-y: auto;
+    overflow-wrap: break-word;
 }
 
 #friends-container {
