--- a/views/groupsall.hbs
+++ b/views/groupsall.hbs
@@ -1,21 +1,25 @@
 {{#if groupsInfo}}
-    <div id="friends-container">
+    <div class="column channels-container channels-column list-group">
         {{#each groupsInfo}}
-            <div class="friend" onclick="switchChannel('groups','{{this.id}}')">
-                <p>{{this.id}} {{this.name}}</p>
-            </div>
+            <a href="/groups/all/{{this.id}}" class="list-group-item list-group-item-action">
+                {{this.id}} {{this.name}}
+            </a>
         {{/each}}
     </div>
-    <div id="message-container" class="message-log"></div>
-    <form id="send-container">
-        <input type="text" name="message" id="message-input">
-        <button type="submit" id="send-button">Send</button>
-    </form>
-    <a href="/groups/all/{{selectedChannelId}}/invite">Invite</a>
-    <a href="/groups/all/{{selectedChannelId}}/leave">Leave</a>
-    {{#iff role '===' 'leader'}}
-        <a href="/groups/all/{{../selectedChannelId}}/kick">Kick</a>
-    {{/iff}}
+    <div class="column message-column">
+        <div id="message-container" class="message-log"></div>
+        <form id="send-container" class="form-inline">
+            <textarea class="form-control submit-textarea" name="message" id="message-input" style="width: 80%;margin: 10px 0 10px 0;"></textarea>
+            <button type="submit" class="btn btn-success" id="send-button" style="margin:auto;width:15%">Send</button>
+        </form>
+        <div>
+            <a href="/groups/all/{{selectedChannelId}}/invite" class="btn btn-success btn-sm" style="height:20%">Invite</a>
+            <a href="/groups/all/{{selectedChannelId}}/leave" class="btn btn-danger btn-sm" style="margin-left: 10px;height:20%">Leave</a>
+            {{#iff role '===' 'leader'}}
+                <a href="/groups/all/{{../selectedChannelId}}/kick" class="btn btn-danger btn-sm" style="margin-left: 10px;height:20%">Kick</a>
+            {{/iff}}
+        </div>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
