--- a/views/partials/subnavbar.hbs
+++ b/views/partials/subnavbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="margin-top:56px;">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="margin-top:56px;">
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
             {{#iff page '===' 'friends'}}
