--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,30 +1,93 @@
 .message-log {
+    height: 360px;
     width: 100%;
-    height: 400px;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    outline: solid black 1px;
-    background-color:greenyellow;
+    background-color: rgb(40, 40, 40);
     overflow-y: auto;
     overflow-wrap: break-word;
+    box-sizing: border-box;
+    border-radius: 5px;
 }
 
-#friends-container {
-    overflow: auto;
-    border: black solid 1px;
+* {
+    color: white;
+}
+
+.form-control {
+    background-color:lightgray;
+}
+/* 
+.form-control:hover {
+    box-shadow: 5px 5px 5px 5px greenyellow;
+} */
+
+body {
+    overflow: hidden;
+    background-color: rgb(80, 80, 80);
+}
+
+.row:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    float: left;
+}
+
+.message-column {
+    width: 80%;
+    height: 100%;
+    padding: 0 10px 0 10px;
+}
+
+.submit-textarea {
+    resize: none;
+    width: 80%;
+}
+
+.channels-container {
+    width: 20%;
+    height: 465px;
+    overflow: hidden auto;
+}
+
+.navbar {
+    background-color: rgb(40, 40, 40);
+}
+
+.channels-column {
+    padding-left: 10px;
+}
+
+.list-group-item {
+    background-color: rgb(50, 50, 50);
+    color: #FFFFFF80;
+}
+
+.list-group-item-action:hover {
+    background-color: #218838;
+    color: white;
+}
+
+.form-control:focus {
+    border-color: greenyellow;
+    box-shadow: 0 0 0 0.2rem rgba(0, 255, 34, 0.25);
 }
 
 .friend {
     border: black solid 1px;
+    box-sizing: border-box;
     padding: 10px;
 }
 
-#request-container {
-    overflow: auto;
-    border: black solid 1px;
+::-webkit-scrollbar{
+    width:5px;
+    background-color: white;
+    border-radius: 10px;
 }
 
-.request {
-    border: black solid 1px;
-    padding: 10px;
-}
+::-webkit-scrollbar-thumb {
+    background: greenyellow;
+    border-radius: 10px;
+  }
