--- a/views/groupsinvitations.hbs
+++ b/views/groupsinvitations.hbs
@@ -1,12 +1,14 @@
-<div id="request-container">
+<div class="container">
     {{#if inviteGroupsInfo}}
-        {{#each inviteGroupsInfo}}
-            <div class="request" group_id="{{this.id}}">
-                <p>{{this.id}} {{this.name}}</p>
-                <button onclick='acceptGroupInvitation("{{this.id}}")'>Accept</button>
-                <button onclick='rejectGroupInvitation("{{this.id}}")'>Reject</button>
-            </div>
-        {{/each}}
+        <ul id="invitations-container" class="list-group" style="height:460px;overflow:hidden auto">
+            {{#each inviteGroupsInfo}}
+                <li class="list-group-item" group_id="{{this.id}}">
+                    <p style="color:inherit">{{this.id}} {{this.name}}</p>
+                    <button type="button" class="btn btn-success" onclick='acceptFriendRequest("{{this.id}}")'>Accept</button>
+                    <button type="button" class="btn btn-danger" onclick='rejectFriendRequest("{{this.id}}")'>Reject</button>
+                </li>
+            {{/each}}
+        </ul>
     {{else}}
         No group invitations
     {{/if}}
