--- a/views/groupskick.hbs
+++ b/views/groupskick.hbs
@@ -1,21 +1,23 @@
-<a href="/groups/all/{{selectedChannelId}}">Go Back</a>
+<div class="container">
+    <a href="/groups/all/{{selectedChannelId}}" class="btn btn-warning btn-sm">Go Back</a>
 
-{{#if errorMessage}}
-    <div class="alert alert-danger">
-        {{errorMessage}}
-    </div>
-{{/if}}
+    {{#if errorMessage}}
+        <div class="alert alert-danger">
+            {{errorMessage}}
+        </div>
+    {{/if}}
 
-{{#if successMessage}}
-    <div class="alert alert-danger">
-        {{successMessage}}
-    </div>
-{{/if}}
+    {{#if successMessage}}
+        <div class="alert alert-success">
+            {{successMessage}}
+        </div>
+    {{/if}}
 
-<form method="POST", action="/groups/all/{{selectedChannelId}}/kick">
-    <div class="form-group">
-        <label for="friendName">Kick Member:</label>
-        <input type="text" name="groupMemberName" class="form-control" placeholder="Group Member Username">       
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <form method="POST", action="/groups/all/{{selectedChannelId}}/kick">
+        <div class="form-group">
+            <label for="friendName">Kick Member:</label>
+            <input type="text" name="groupMemberName" class="form-control" placeholder="Group Member Username">       
+        </div>
+        <button type="submit" class="btn btn-danger">Submit</button>
+    </form>
+</div>
