--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,5 @@
-<h2>Hello There<h2>
-<h2>Welcome to my shitty app</h2>
-<h2>Please don't DDOS me lmao</h2>
+<div class="container">
+    <h2>Hello There<h2>
+    <h2>Welcome to my shitty app</h2>
+    <h2>Please don't DDOS me lmao</h2>
+</div>
