--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,2 +1,4 @@
-<h2>Username: {{username}}</h2>
-<h2>Password: {{password}}</h2>
+<div class="container">
+    <h2>Username: {{username}}</h2>
+    <h2>Password: {{password}}</h2>
+</div>
