--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     {{#if errors}}
         {{#each errors}}
             <div class="alert alert-danger">
@@ -6,20 +6,20 @@
             </div>
         {{/each}}
     {{/if}}
-</div>
 
-<form method="POST" action="/register">
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username" class="form-control" placeholder="Username">
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" class="form-control" placeholder="Password">
-    </div>
-    <div class="form-group">
-        <label for="passwordMatch">Re-Enter Password</label>
-        <input type="password" name="passwordMatch" class="form-control" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <form method="POST" action="/register">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="username" class="form-control" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label for="passwordMatch">Re-Enter Password</label>
+            <input type="password" name="passwordMatch" class="form-control" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+</div>
