--- a/views/groupsinvitations.hbs
+++ b/views/groupsinvitations.hbs
@@ -4,8 +4,8 @@
             {{#each inviteGroupsInfo}}
                 <li class="list-group-item" group_id="{{this.id}}">
                     <p style="color:inherit">{{this.id}} {{this.name}}</p>
-                    <button type="button" class="btn btn-success" onclick='acceptFriendRequest("{{this.id}}")'>Accept</button>
-                    <button type="button" class="btn btn-danger" onclick='rejectFriendRequest("{{this.id}}")'>Reject</button>
+                    <button type="button" class="btn btn-success" onclick='acceptGroupInvitation("{{this.id}}")'>Accept</button>
+                    <button type="button" class="btn btn-danger" onclick='rejectGroupInvitation("{{this.id}}")'>Reject</button>
                 </li>
             {{/each}}
         </ul>
