--- a/views/friendsall.hbs
+++ b/views/friendsall.hbs
@@ -1,22 +1,25 @@
 {{#if friendsInfo}}
     <div class="column channels-container channels-column list-group">
         {{#each friendsInfo}}
-            <a href="/friends/all/{{this.channelId}}" class="list-group-item list-group-item-action">
+            <a href="/friends/all/{{this.channelId}}" class="list-group-item list-group-item-action 
+            {{#iff ../selectedChannelId '===' this.channelId}}
+                active
+            {{/iff}}">
                 {{this.id}} {{this.username}}
             </a>
         {{/each}}
     </div>
     <div class="column message-column">
         <div id="message-container" class="message-log">
-            <div id="loading-spinner" class="text-center" style="color:greenyellow;border:lightgrey 2px solid">
-                <div class="spinner-border spinner-border-sm" style="color:greenyellow" role="status">
+            <div id="spinner-box" class="text-center spinner-box">
+                <div class="spinner-border spinner-border-sm" role="status">
                     <span class="sr-only">Loading...</span>
                 </div>
                 Loading...
             </div>
         </div>
         <form id="send-container" class="form-inline">
-            <textarea class="form-control submit-textarea" name="message" id="message-input" style="width:80%;margin: 20px 0 10px 0;"></textarea>
+            <textarea class="form-control submit-textarea" name="message" id="message-input" style="margin: 20px 0 10px 0;"></textarea>
             <button type="submit" class="btn btn-success" id="send-button" style="margin:auto;width:15%">Send</button>
         </form>
     </div>
