--- a/views/groupskick.hbs
+++ b/views/groupskick.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <a href="/groups/all/{{selectedChannelId}}" class="btn btn-warning btn-sm">Go Back</a>
+    <a href="/groups/all/{{selectedChannelId}}" class="btn btn-warning btn-sm btn-back">Go Back</a>
 
     {{#if errorMessage}}
         <div class="alert alert-danger">
