kicking is working... i think...

--- a/views/friendsall.hbs
+++ b/views/friendsall.hbs
@@ -26,5 +26,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
 {{else}}
-    <p>You need friends</p>
+    <div class="container">
+        <p>You need friends</p>
+    </div>
 {{/if}}
