--- a/views/groupsall.hbs
+++ b/views/groupsall.hbs
@@ -34,5 +34,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
 {{else}}
-    <p>You need a group to join!</p>
+    <div class="container">
+        <p>You need a group to join!</p>
+    </div>
 {{/if}}
