--- a/views/groupsall.hbs
+++ b/views/groupsall.hbs
@@ -31,6 +31,8 @@
         </div>
     </div>
 
+    {{>modal id="spam-modal" text="stop spaming"}}
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
 {{else}}
