--- a/views/groupsinvitations.hbs
+++ b/views/groupsinvitations.hbs
@@ -16,24 +16,11 @@
 
 <script src="/public/js/groupinvitations.js"></script>
 
-<div class="modal fade" id="invalidInvitation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content" style="background-color:whitesmoke;">
-      <div class="modal-header" style="background-color:red;border:none;">
-        <h5 class="modal-title" id="exampleModalLabel">Oh No!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true" style="color:black;text-shadow:none;">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" style="color:black;padding:10px;">
-        You cannot accept or reject this group invitation since it does not exist anymore! Fat RIP!
-      </div>
-      <div class="modal-footer" style="border:none;">
-        <button type="button" class="btn btn-success" data-dismiss="modal">Ok</button>
-      </div>
-    </div>
-  </div>
-</div>
+{{>modal
+  id="invalid-invitation"
+  title="Invalid Group Invitation!"
+  text="You cannot accept or reject this group invitation since it does not exist anymore! Fat RIP!"
+}}
 
 <style>
     .close:focus { outline: none; }
