better looking navbar

--- a/views/friendsadd.hbs
+++ b/views/friendsadd.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="friends" subpage="add"}}
+
 <div class="container">
     {{#if errorMessage}}
         <div class="alert alert-danger">
