--- a/views/friendsall.hbs
+++ b/views/friendsall.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="friends" subpage="all"}}
+
 {{#if friendsInfo}}
     <div class="column channels-container channels-column list-group">
         {{#each friendsInfo}}
