--- a/views/friendsremove.hbs
+++ b/views/friendsremove.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="friends" subpage="remove"}}
+
 <div class="container">
     {{#if errorMessage}}
         <div class="alert alert-danger">
