--- a/views/friendsrequests.hbs
+++ b/views/friendsrequests.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="friends" subpage="requests"}}
+
 <div class="container">
     {{#if requestFriendsInfo}}
         <ul id="requests-container" class="list-group requests">
