--- a/views/groupsall.hbs
+++ b/views/groupsall.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="groups" subpage="all"}}
+
 {{#if groupsInfo}}
     <div class="column channels-container channels-column list-group">
         {{#each groupsInfo}}
