--- a/views/groupscreate.hbs
+++ b/views/groupscreate.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="groups" subpage="create"}}
+
 <div class="container">
     {{#if successMessage}}
         <div class="alert alert-success">
