--- a/views/groupsinvitations.hbs
+++ b/views/groupsinvitations.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="groups" subpage="invitations"}}
+
 <div class="container">
     {{#if inviteGroupsInfo}}
         <ul id="invitations-container" class="list-group requests">
