--- a/views/groupsinvite.hbs
+++ b/views/groupsinvite.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="groups" subpage="all"}}
+
 <div class="container">
     <a href="/groups/all/{{selectedChannelId}}" class="btn btn-warning btn-sm btn-back">Go Back</a>
 
@@ -21,3 +23,4 @@
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
+
