--- a/views/groupsleaveleaderselect.hbs
+++ b/views/groupsleaveleaderselect.hbs
@@ -1,3 +1,5 @@
+{{>navbar page="groups" subpage="all"}}
+
 <div class="container">
     <a href="/groups/all/{{selectedChannelId}}" class="btn btn-warning btn-sm btn-back">Go Back</a>
 
