--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <a class="navbar-brand" href="/" style="color:greenyellow">MyCoolApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <div class="navbar-toggler-icon"></div>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
@@ -12,15 +12,27 @@
                 <li class="nav-item {{#iff page '===' 'profile'}}active{{/iff}}">
                     <a class="nav-link" href="/profile">Profile</a>
                 </li>
-                <li class="nav-item {{#iff page '===' 'groups'}}active{{/iff}}">
-                    <a class="nav-link" href="/groups">Groups</a>
-                </li>
-                <li class="nav-item {{#iff page '===' 'friends'}}active{{/iff}}">
-                    <a class="nav-link" href="/friends">Friends</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
+                <div class="dropdown ml-2 mb-2">
+                    <button class="btn btn-secondary dropdown-toggle btn-success {{#iff page '===' 'groups'}}active{{/iff}}" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Groups
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item {{#iff page '===' 'groups' }}{{#iff ../subpage '===' 'all'}}active{{/iff}}{{/iff}}" href="/groups/all/">All</a>
+                        <a class="dropdown-item {{#iff page '===' 'groups' }}{{#iff ../subpage '===' 'invitations'}}active{{/iff}}{{/iff}}" href="/groups/invitations">Invitations</a>
+                        <a class="dropdown-item {{#iff page '===' 'groups' }}{{#iff ../subpage '===' 'create'}}active{{/iff}}{{/iff}}" href="/groups/create">Create</a>
+                    </div>
+                </div>
+                <div class="dropdown ml-2 mb-2">
+                    <button class="btn btn-secondary dropdown-toggle btn-success {{#iff page '===' 'friends'}}active{{/iff}}" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Friends
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item {{#iff page '===' 'friends' }}{{#iff ../subpage '===' 'all'}}active{{/iff}}{{/iff}}" href="/friends/all/">All</a>
+                        <a class="dropdown-item {{#iff page '===' 'friends' }}{{#iff ../subpage '===' 'requests'}}active{{/iff}}{{/iff}}" href="/friends/requests">Requests</a>
+                        <a class="dropdown-item {{#iff page '===' 'friends' }}{{#iff ../subpage '===' 'add'}}active{{/iff}}{{/iff}}" href="/friends/add">Add</a>
+                        <a class="dropdown-item {{#iff page '===' 'friends' }}{{#iff ../subpage '===' 'remove'}}active{{/iff}}{{/iff}}" href="/friends/remove">Remove</a>
+                    </div>
+                </div>
             {{else}}
                 <li class="nav-item {{#iff page '===' 'register'}}active{{/iff}}">
                     <a class="nav-link" href="/register">Register</a>
@@ -30,9 +42,12 @@
                 </li>
             {{/if}}
         </ul>
-        {{!-- <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> --}}
+        {{#if isAuthenticated}}
+            <form class="form-inline my-2 my-lg-0" method="POST" action="/logout" >
+                <button id="logout-button" class="btn btn-outline-danger my-2 my-sm-0" type="submit">
+                    Logout
+                </button>
+            </form>
+        {{/if}}
     </div>
 </nav>
