--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,6 +1,54 @@
 {{>navbar page="profile"}}
 
+
 <div class="container">
-    <h2>Username: {{username}}</h2>
-    <h2>Password: {{password}}</h2>
+    {{#if errors}}
+        {{#each errors}}
+            <div class="alert alert-danger">
+                {{this}}
+            </div>
+        {{/each}}
+    {{/if}}
+
+    {{#if success}}
+        <div class="alert alert-success">
+            {{success}}
+        </div>
+    {{/if}}
+
+    <form method="POST" action="/profile">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="username" class="form-control" placeholder="Username" value={{username}}>
+        </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" name="changePassword">
+            <label class="form-check-label" for="changePassword">Change Password</label>
+        </div>
+        <div id="change-password">
+            <div class="form-group">
+                <label for="password">Old Password</label>
+                <input type="password" name="oldPassword" class="form-control" placeholder="Old Password">
+            </div>
+            <div class="form-group">
+                <label for="newPassword">New Password</label>
+                <input type="password" name="newPassword" class="form-control" placeholder="New Password">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
 </div>
+
+<script> 
+    $("#change-password").css("display", "none");
+    $("input[type=checkbox]").change(function(){
+        if (this.checked){
+            $("#change-password").show();
+        }
+        else {
+            $("#change-password").css("display", "none");
+            $("input[name=oldPassword]").val("");
+            $("input[name=newPassword]").val("");
+        }
+    });
+</script>
