--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -34,6 +34,10 @@
                 <label for="newPassword">New Password</label>
                 <input type="password" name="newPassword" class="form-control" placeholder="New Password">
             </div>
+            <div class="form-group">
+                <label for="newPassword">New Password Confirmation</label>
+                <input type="password" name="newPasswordConfirm" class="form-control" placeholder="New Password Confirm">
+            </div>
         </div>
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
