--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <img src="../../public/img/MichaelL.png" style="height: 35px; width:35px; margin-right:10px">
     <a class="navbar-brand" href="/" style="color:greenyellow">MyCoolApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <div class="navbar-toggler-icon"></div>
