dont clear text profile

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -50,9 +50,7 @@
             $("#change-password").show();
         }
         else {
-            $("#change-password").css("display", "none");
-            $("input[name=oldPassword]").val("");
-            $("input[name=newPassword]").val("");
+            $("#change-password").css("`display", "none");
         }
     });
 </script>
