--- a/views/friendsrequests.hbs
+++ b/views/friendsrequests.hbs
@@ -18,7 +18,7 @@
 
 <script src="/public/js/friendsrequests.js"></script>
 
-{{>modal 
+{{>errormodal 
     id="invalid-request"
     title="Invalid Friend Request!"
     text="You cannot accept or reject this friend request since it does not exist anymore! Fat RIP!"
