--- a/views/groupsinvitations.hbs
+++ b/views/groupsinvitations.hbs
@@ -18,12 +18,8 @@
 
 <script src="/public/js/groupinvitations.js"></script>
 
-{{>modal
+{{>errormodal
   id="invalid-invitation"
   title="Invalid Group Invitation!"
   text="You cannot accept or reject this group invitation since it does not exist anymore! Fat RIP!"
 }}
-
-<style>
-    .close:focus { outline: none; }
-</style>
