--- a/views/groupsall.hbs
+++ b/views/groupsall.hbs
@@ -14,9 +14,7 @@
     <div class="column message-column-groups">
         <div id="message-container" class="message-log">
             <div id="spinner-box" class="text-center spinner-box">
-                <div class="spinner-border spinner-border-sm" role="status">
-                    <span class="sr-only">Loading...</span>
-                </div>
+                <div class="spinner-border spinner-border-sm spinner-green" role="status"></div>
                 Loading...
             </div>
         </div>
@@ -25,10 +23,10 @@
             <button type="submit" class="btn btn-success" id="send-button" style="margin:auto;width:15%">Send</button>
         </form>
         <div>
-            <a href="/groups/all/{{selectedChannelId}}/invite" class="btn btn-success btn-sm" style="height:20%">Invite</a>
-            <a href="/groups/all/{{selectedChannelId}}/leave" class="btn btn-danger btn-sm" style="margin-left: 10px;height:20%">Leave</a>
+            <button class="btn btn-success btn-sm" style="height:20%" data-toggle="modal" data-target="#invite-modal">Invite</button>
+            <button class="btn btn-danger btn-sm" style="margin-left: 10px;height:20%" data-toggle="modal" data-target="#leave-modal">Leave</button>
             {{#iff role '===' 'leader'}}
-                <a href="/groups/all/{{../selectedChannelId}}/kick" class="btn btn-danger btn-sm" style="margin-left: 10px;height:20%">Kick</a>
+                <button class="btn btn-danger btn-sm" style="margin-left: 10px;height:20%" data-toggle="modal" data-target="#kick-modal">Kick</button>
             {{/iff}}
         </div>
     </div>
@@ -40,7 +38,15 @@
         {{/each}}
     </div>
 
-    {{>modal id="spam-modal" text="stop spaming"}}
+    {{>errormodal
+        id="spam-modal"
+        title="Spammer Alert!"
+        text="Say no to toxic behaviour!"
+    }}
+    {{>leavemodal}}
+    {{>invitemodal}}
+    {{>promotemodal}}
+    {{>kickmodal}}
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/js/chat.js"></script>
