--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -44,13 +44,13 @@
 </div>
 
 <script> 
-    $("#change-password").css("display", "none");
+    $("#change-password").hide();
     $("input[type=checkbox]").change(function(){
         if (this.checked){
             $("#change-password").show();
         }
         else {
-            $("#change-password").css("`display", "none");
+            $("#change-password").hide();
         }
     });
 </script>
