group name min len /  proper show profile name

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -19,7 +19,7 @@
     <form method="POST" action="/profile">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" name="username" class="form-control" placeholder="Username" value={{username}}>
+            <input type="text" name="username" class="form-control" placeholder="Username" value="{{username}}">
         </div>
         <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" name="changePassword">
